tests/ui/rfc-2632-const-trait-impl/gate.stderr
error[E0658]: const closures are experimental
  --> $DIR/gate.rs:4:6
   |
LL |     (const || {})();
   |      ^^^^^
   |
   = note: see issue #106003 <https://github.com/crablang/crablang/issues/106003> for more information
   = help: add `#![feature(const_closures)]` to the crate attributes to enable

error[E0658]: const closures are experimental
  --> $DIR/gate.rs:12:5
   |
LL | e!((const || {}));
   |     ^^^^^
   |
   = note: see issue #106003 <https://github.com/crablang/crablang/issues/106003> for more information
   = help: add `#![feature(const_closures)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0658`.
